--- a/styles/style.css
+++ b/styles/style.css
@@ -5,7 +5,45 @@
   padding: 0;
   box-sizing: border-box;
 }
+   /* Preloader styles */
+   #preloader {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 9999;
+  }
 
+  .typing-text {
+    font-size: 2rem;
+    font-weight: 400;
+    color: #1d3557;
+    border-right: 3px solid;
+    white-space: nowrap;
+    overflow: hidden;
+    width: 0;
+    animation: typing 3s steps(5, end), blink 0.7s step-end infinite alternate;
+  }
+
+  /* Typing animation */
+  @keyframes typing {
+    from { width: 0; }
+    to { width: 6.5ch; }
+  }
+
+  @keyframes blink {
+    50% { border-color: transparent; }
+  }
+
+  /* Hide content initially */
+  .content {
+    display: none;
+  }
 body {
   font-family: 'Poppins', sans-serif;
   justify-content: center;
